# psycopg2-2.9-create-database

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: 01_failed.py  02_success.py
